--- a/ExampleApp/Components/App.razor
+++ b/ExampleApp/Components/App.razor
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="_content/BlazorExecutionFlow/css/BlazorExecutionFlow.lib.module.css?v=@randomNum" />
     <link rel="stylesheet" href="_content/BlazorExecutionFlow/BlazorExecutionFlow.bundle.scp.css?v=@randomNum" />
     <script src="_content/BlazorExecutionFlow/js/drawflowInterop.js?v=@randomNum"></script>
+    <script src="theme.js?v=@randomNum"></script>
 
     <HeadOutlet @rendermode="InteractiveServer" />
 </head>
